@@ -45,6 +45,12 @@
     * Fixed operation of OSFS on win32 when it points to the root of a drive.
     * Made SubFS a subclass of WrapFS, and moved it into its own module at
       fs.wrapfs.subfs.
+    * OSFSWatchMixin improvements:
+        * ensure that immortal reference cycles aren't created.
+        * watch_inotify:  allow more than one watcher on a single path.
+        * watch_win32:  report errors if the filesystem does't support
+                        ReadDirectoryChangesW.
+        * watch_win32:  don't create immortal reference cycles.
     * Fix OSFS.add_watcher on linux platforms; previous version would cancel
       any watchers when a new one was added.
     * MountFS: added support for mounting at the root directory, and for
